# cardano-wallet-tools

./: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  cabal.project  cardano-wallet-tools.cabal  flake.nix  fourmolu.yaml  gate.sh  justfile  mkdocs.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  sync-cabal-version.yml
.specify/memory/: constitution.md
app/: Main.hs
app/Cli/: Key.hs  Pipe.hs
docs/: design.md  index.md
lib/Cardano/Wallet/Tools/: Sign.hs  Vault.hs
lib/Cardano/Wallet/Tools/Cli/: Vault.hs
lib/Cardano/Wallet/Tools/Selection/: Collateral.hs  Strategy.hs
lib/Cardano/Wallet/Tools/Sign/: AttachWitness.hs  Witness.hs
specs/3-signer-abstraction/: plan.md  spec.md  tasks.md
test/Cardano/Wallet/Tools/: VaultSpec.hs
test/Cardano/Wallet/Tools/Selection/: CollateralSpec.hs  StrategySpec.hs
test/Cardano/Wallet/Tools/Sign/: AttachWitnessSpec.hs  WitnessSpec.hs
