cabal-version:   3.4
name:            cardano-wallet-tools
version:         0.1.0.0
synopsis:        Wallet-side UTxO, coin, and collateral selection
description:
  Pure, WASM-portable wallet-side selection for Cardano: coin selection
  and multi-UTxO, native-asset-aware collateral selection. The
  ledger-typed wrappers, trust-minimized resolution backends, operator
  CLI, and PureScript CIP-30 browser wallet build on this core.

license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
copyright:       (c) Paolo Veronelli, 2026
category:        Cardano
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

flag werror
  description: Enable -Werror (used by nix builds and CI).
  manual:      True
  default:     False

common warnings
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields

  if flag(werror)
    ghc-options: -Werror

common language
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings

library
  import:          warnings, language
  hs-source-dirs:  lib
  exposed-modules:
    Cardano.Wallet.Tools.Cli.Vault
    Cardano.Wallet.Tools.Selection.Collateral
    Cardano.Wallet.Tools.Selection.Strategy
    Cardano.Wallet.Tools.Sign
    Cardano.Wallet.Tools.Sign.AttachWitness
    Cardano.Wallet.Tools.Sign.Witness
    Cardano.Wallet.Tools.Vault

  build-depends:
    , aeson
    , age
    , base                  >=4.18 && <5
    , base16-bytestring
    , bytestring
    , containers
    , crypton
    , memory
    , optparse-applicative
    , text
    , transformers

executable cwt
  import:         warnings, language
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:
    Cli.Key
    Cli.Pipe

  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , cardano-wallet-tools
    , optparse-applicative
    , text

test-suite spec
  import:             warnings, language
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:
    Cardano.Wallet.Tools.Selection.CollateralSpec
    Cardano.Wallet.Tools.Selection.StrategySpec
    Cardano.Wallet.Tools.Sign.AttachWitnessSpec
    Cardano.Wallet.Tools.Sign.WitnessSpec
    Cardano.Wallet.Tools.VaultSpec

  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , base
    , bytestring
    , cardano-wallet-tools
    , hspec
    , QuickCheck
